welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: '(' expected but identifier found.
  if estFaceMur() {
     ^SlugTracking:19: error: illegal start of simple expression
} 
^